[package]
name = "ResourcePool"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.0.1"
thiserror = "1.0.63"
derive_more = {version =  "1.0.0" , features = ["full"]}
hyper = "1.4.1"
log = "0.4.22"
env_logger = "0.11.5"
parking_lot = "0.12.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_derive = "1.0.208"
reqwest = { version = "0.12.5" , features = ["blocking"]}
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.125"
crossbeam = "0.8.4"
rand = "0.9.0-alpha.2"
rand_distr = "0.5.0-alpha.3"